// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic edit 1`] = `
Object {
  "a": "mike",
  "ac": Array [
    " Cobbler's forms",
    "Absolutely perfect",
    "Spike Lee's \\"She's ___ Have It\\"",
    "A new clue for essay",
    "Raises, as young",
  ],
  "an": Array [
    1,
    6,
    7,
    8,
    9,
  ],
  "c": null,
  "cs": Array [
    Object {
      "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
      "c": "A couple of two-worders today which I don't love, but I hope you all got it anyway!",
      "ch": false,
      "i": "LwgoVx0BAskM4wVJyoLj",
      "n": "Mike D",
      "t": 36.009,
    },
  ],
  "dc": Array [
    "Hybrid whose father is a lion",
    "___ of reality (wake-up call)",
    "___ date (makes wedding plans)",
    "Middle Ages invader",
    "Has a great night at the comedy club",
  ],
  "dn": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "g": Array [
    "L",
    "A",
    "S",
    "T",
    "S",
    "I",
    "D",
    "E",
    "A",
    "L",
    "G",
    "O",
    "T",
    "T",
    "A",
    "E",
    "S",
    "S",
    "A",
    "Y",
    "R",
    "E",
    "A",
    "R",
    "S",
  ],
  "h": 5,
  "m": false,
  "n": "Mike D",
  "pv": true,
  "t": "Raises, as young",
  "w": 5,
}
`;

exports[`basic edit 2`] = `
Object {
  "a": "mike",
  "ac": Array [
    " Cobbler's forms",
    "Absolutely perfect",
    "Spike Lee's \\"She's ___ Have It\\"",
    "A new clue for essay",
    "Raises, as young",
  ],
  "an": Array [
    1,
    6,
    7,
    8,
    9,
  ],
  "c": null,
  "cs": Array [
    Object {
      "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
      "c": "A couple of two-worders today which I don't love, but I hope you all got it anyway!",
      "ch": false,
      "i": "LwgoVx0BAskM4wVJyoLj",
      "n": "Mike D",
      "t": 36.009,
    },
  ],
  "dc": Array [
    "Hybrid whose father is a lion",
    "___ of reality (wake-up call)",
    "A new clue for wedding",
    "Middle Ages invader",
    "Has a great night at the comedy club",
  ],
  "dn": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "g": Array [
    "L",
    "A",
    "S",
    "T",
    "S",
    "I",
    "D",
    "E",
    "A",
    "L",
    "G",
    "O",
    "T",
    "T",
    "A",
    "E",
    "S",
    "S",
    "A",
    "Y",
    "R",
    "E",
    "A",
    "R",
    "S",
  ],
  "h": 5,
  "m": false,
  "n": "Mike D",
  "pv": true,
  "t": "Raises, as young",
  "w": 5,
}
`;

exports[`edit blog post 1`] = `
Object {
  "a": "mike",
  "ac": Array [
    " Cobbler's forms",
    "Absolutely perfect",
    "Spike Lee's \\"She's ___ Have It\\"",
    "English class assignment",
    "Raises, as young",
  ],
  "an": Array [
    1,
    6,
    7,
    8,
    9,
  ],
  "bp": "Here is our new blog post",
  "c": null,
  "cs": Array [
    Object {
      "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
      "c": "A couple of two-worders today which I don't love, but I hope you all got it anyway!",
      "ch": false,
      "i": "LwgoVx0BAskM4wVJyoLj",
      "n": "Mike D",
      "t": 36.009,
    },
  ],
  "dc": Array [
    "Hybrid whose father is a lion",
    "___ of reality (wake-up call)",
    "___ date (makes wedding plans)",
    "Middle Ages invader",
    "Has a great night at the comedy club",
  ],
  "dn": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "g": Array [
    "L",
    "A",
    "S",
    "T",
    "S",
    "I",
    "D",
    "E",
    "A",
    "L",
    "G",
    "O",
    "T",
    "T",
    "A",
    "E",
    "S",
    "S",
    "A",
    "Y",
    "R",
    "E",
    "A",
    "R",
    "S",
  ],
  "h": 5,
  "m": false,
  "n": "Mike D",
  "pv": true,
  "t": "Raises, as young",
  "w": 5,
}
`;

exports[`edit blog post 2`] = `
Object {
  "a": "mike",
  "ac": Array [
    " Cobbler's forms",
    "Absolutely perfect",
    "Spike Lee's \\"She's ___ Have It\\"",
    "English class assignment",
    "Raises, as young",
  ],
  "an": Array [
    1,
    6,
    7,
    8,
    9,
  ],
  "bp": "Here is our new post",
  "c": null,
  "cs": Array [
    Object {
      "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
      "c": "A couple of two-worders today which I don't love, but I hope you all got it anyway!",
      "ch": false,
      "i": "LwgoVx0BAskM4wVJyoLj",
      "n": "Mike D",
      "t": 36.009,
    },
  ],
  "dc": Array [
    "Hybrid whose father is a lion",
    "___ of reality (wake-up call)",
    "___ date (makes wedding plans)",
    "Middle Ages invader",
    "Has a great night at the comedy club",
  ],
  "dn": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "g": Array [
    "L",
    "A",
    "S",
    "T",
    "S",
    "I",
    "D",
    "E",
    "A",
    "L",
    "G",
    "O",
    "T",
    "T",
    "A",
    "E",
    "S",
    "S",
    "A",
    "Y",
    "R",
    "E",
    "A",
    "R",
    "S",
  ],
  "h": 5,
  "m": false,
  "n": "Mike D",
  "pv": true,
  "t": "Raises, as young",
  "w": 5,
}
`;

exports[`edit blog post 3`] = `
Object {
  "a": "mike",
  "ac": Array [
    " Cobbler's forms",
    "Absolutely perfect",
    "Spike Lee's \\"She's ___ Have It\\"",
    "English class assignment",
    "Raises, as young",
  ],
  "an": Array [
    1,
    6,
    7,
    8,
    9,
  ],
  "c": null,
  "cs": Array [
    Object {
      "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
      "c": "A couple of two-worders today which I don't love, but I hope you all got it anyway!",
      "ch": false,
      "i": "LwgoVx0BAskM4wVJyoLj",
      "n": "Mike D",
      "t": 36.009,
    },
  ],
  "dc": Array [
    "Hybrid whose father is a lion",
    "___ of reality (wake-up call)",
    "___ date (makes wedding plans)",
    "Middle Ages invader",
    "Has a great night at the comedy club",
  ],
  "dn": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "g": Array [
    "L",
    "A",
    "S",
    "T",
    "S",
    "I",
    "D",
    "E",
    "A",
    "L",
    "G",
    "O",
    "T",
    "T",
    "A",
    "E",
    "S",
    "S",
    "A",
    "Y",
    "R",
    "E",
    "A",
    "R",
    "S",
  ],
  "h": 5,
  "m": false,
  "n": "Mike D",
  "pv": true,
  "t": "Raises, as young",
  "w": 5,
}
`;

exports[`edit constructor note 1`] = `
Object {
  "a": "mike",
  "ac": Array [
    " Cobbler's forms",
    "Absolutely perfect",
    "Spike Lee's \\"She's ___ Have It\\"",
    "English class assignment",
    "Raises, as young",
  ],
  "an": Array [
    1,
    6,
    7,
    8,
    9,
  ],
  "c": null,
  "cn": "Here is our note",
  "cs": Array [
    Object {
      "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
      "c": "A couple of two-worders today which I don't love, but I hope you all got it anyway!",
      "ch": false,
      "i": "LwgoVx0BAskM4wVJyoLj",
      "n": "Mike D",
      "t": 36.009,
    },
  ],
  "dc": Array [
    "Hybrid whose father is a lion",
    "___ of reality (wake-up call)",
    "___ date (makes wedding plans)",
    "Middle Ages invader",
    "Has a great night at the comedy club",
  ],
  "dn": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "g": Array [
    "L",
    "A",
    "S",
    "T",
    "S",
    "I",
    "D",
    "E",
    "A",
    "L",
    "G",
    "O",
    "T",
    "T",
    "A",
    "E",
    "S",
    "S",
    "A",
    "Y",
    "R",
    "E",
    "A",
    "R",
    "S",
  ],
  "h": 5,
  "m": false,
  "n": "Mike D",
  "pv": true,
  "t": "Raises, as young",
  "w": 5,
}
`;

exports[`edit constructor note 2`] = `
Object {
  "a": "mike",
  "ac": Array [
    " Cobbler's forms",
    "Absolutely perfect",
    "Spike Lee's \\"She's ___ Have It\\"",
    "English class assignment",
    "Raises, as young",
  ],
  "an": Array [
    1,
    6,
    7,
    8,
    9,
  ],
  "c": null,
  "cn": "Here is our new note",
  "cs": Array [
    Object {
      "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
      "c": "A couple of two-worders today which I don't love, but I hope you all got it anyway!",
      "ch": false,
      "i": "LwgoVx0BAskM4wVJyoLj",
      "n": "Mike D",
      "t": 36.009,
    },
  ],
  "dc": Array [
    "Hybrid whose father is a lion",
    "___ of reality (wake-up call)",
    "___ date (makes wedding plans)",
    "Middle Ages invader",
    "Has a great night at the comedy club",
  ],
  "dn": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "g": Array [
    "L",
    "A",
    "S",
    "T",
    "S",
    "I",
    "D",
    "E",
    "A",
    "L",
    "G",
    "O",
    "T",
    "T",
    "A",
    "E",
    "S",
    "S",
    "A",
    "Y",
    "R",
    "E",
    "A",
    "R",
    "S",
  ],
  "h": 5,
  "m": false,
  "n": "Mike D",
  "pv": true,
  "t": "Raises, as young",
  "w": 5,
}
`;

exports[`edit constructor note 3`] = `
Object {
  "a": "mike",
  "ac": Array [
    " Cobbler's forms",
    "Absolutely perfect",
    "Spike Lee's \\"She's ___ Have It\\"",
    "English class assignment",
    "Raises, as young",
  ],
  "an": Array [
    1,
    6,
    7,
    8,
    9,
  ],
  "c": null,
  "cs": Array [
    Object {
      "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
      "c": "A couple of two-worders today which I don't love, but I hope you all got it anyway!",
      "ch": false,
      "i": "LwgoVx0BAskM4wVJyoLj",
      "n": "Mike D",
      "t": 36.009,
    },
  ],
  "dc": Array [
    "Hybrid whose father is a lion",
    "___ of reality (wake-up call)",
    "___ date (makes wedding plans)",
    "Middle Ages invader",
    "Has a great night at the comedy club",
  ],
  "dn": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "g": Array [
    "L",
    "A",
    "S",
    "T",
    "S",
    "I",
    "D",
    "E",
    "A",
    "L",
    "G",
    "O",
    "T",
    "T",
    "A",
    "E",
    "S",
    "S",
    "A",
    "Y",
    "R",
    "E",
    "A",
    "R",
    "S",
  ],
  "h": 5,
  "m": false,
  "n": "Mike D",
  "pv": true,
  "t": "Raises, as young",
  "w": 5,
}
`;

exports[`edit title 1`] = `
Object {
  "a": "mike",
  "ac": Array [
    " Cobbler's forms",
    "Absolutely perfect",
    "Spike Lee's \\"She's ___ Have It\\"",
    "English class assignment",
    "Raises, as young",
  ],
  "an": Array [
    1,
    6,
    7,
    8,
    9,
  ],
  "c": null,
  "cs": Array [
    Object {
      "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
      "c": "A couple of two-worders today which I don't love, but I hope you all got it anyway!",
      "ch": false,
      "i": "LwgoVx0BAskM4wVJyoLj",
      "n": "Mike D",
      "t": 36.009,
    },
  ],
  "dc": Array [
    "Hybrid whose father is a lion",
    "___ of reality (wake-up call)",
    "___ date (makes wedding plans)",
    "Middle Ages invader",
    "Has a great night at the comedy club",
  ],
  "dn": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "g": Array [
    "L",
    "A",
    "S",
    "T",
    "S",
    "I",
    "D",
    "E",
    "A",
    "L",
    "G",
    "O",
    "T",
    "T",
    "A",
    "E",
    "S",
    "S",
    "A",
    "Y",
    "R",
    "E",
    "A",
    "R",
    "S",
  ],
  "h": 5,
  "m": false,
  "n": "Mike D",
  "pv": true,
  "t": "Well we got a new title",
  "w": 5,
}
`;
